junk/beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beta
  labels:
    istio-injection: enabled
